data/derived/sp14/progs/unify/prog4622.ml.out
Characters 46-51:
  | VarX -> float*x
            ^^^^^
Error: This expression has type int -> float
       but an expression was expected of type int
